# rain-in-australia

./: .gitignore  README.md  download_dataset.py  notes.md  pyproject.toml
models/: RiA-svm.ipynb  analysis.ipynb  data_cleaning.ipynb  ensamble.ipynb  logistic-reg.ipynb  persistence.py  pipeline.py  rains-in-australia-comparacion-modelos.ipynb  rains-in-australia.ipynb  visualization.ipynb
models/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
models/catboost_info/learn/: events.out.tfevents
