[tool.poetry]
name = "rain-in-australia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
sklearn = "^0.0.post12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
