[tool.poetry]
name = "rain-in-australia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
scikit-learn = "^1.5.2"
geopandas = "^1.0.1"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
